# dots

./: README.md  load_dots.sh  main.sh  sync_git.sh
etc/NetworkManager/: NetworkManager.conf
etc/keyd/: common  default.conf
etc/nixos/: configuration.nix  fenix.nix  flake.nix  hardware-configuration.nix  home.nix
etc/nixos/config/fish/: cli_translate.fish  cs_nav.fish  global.fish  main.fish  mod.nix  nvim.fish  other.fish  tmux.fish
etc/nixos/help_scripts/: cargo.sh  color_under_cursor.py  document_watch.sh  git.sh  gpt_build.py  nu-wrapper.sh  pip_upload.sh  theme_toggle.sh  weird.sh
etc/nixos/help_scripts/goShellScripts/: .gitignore  go.mod
etc/nixos/help_scripts/shell_harpoon/: config.sh
etc/nixos/help_scripts/weird/: sbf_tweet.txt
etc/nixos/other/: fenix.nix  fish.nix
etc/systemd/system/getty@tty1.service.d/: override.conf
home/v/: .bashrc  .lesskey  .profile  .zprofile  .zshrc
home/v/.cargo/: config.toml
home/v/.config/: btc_line.toml  discretionary_engine.toml  greenclip.toml  mimeapps.list  tg.toml  tg_admin.toml  tmux.conf  todo.toml
home/v/.config/alacritty/: README.md  alacritty.toml  alacritty.yml  alacritty.yml.bak
home/v/.config/cargo/: config.toml
home/v/.config/dconf/: user
home/v/.config/discord/: settings.json
home/v/.config/eww/: README.md  eww.scss  eww.yuck  revealer.yuck
home/v/.config/foot/: foot.ini
home/v/.config/nvim/help_scripts/prettify_log/: Cargo.toml  README.md  rustfmt.toml
home/v/.config/nvim/help_scripts/prettify_log/src/: ast.rs  lexer.rs  main.rs  tree_kinds.rs  utils.rs
home/v/.config/nvim/help_scripts/prettify_log/src/snapshots/: prettify_log__parser__tests__parsing.snap
home/v/.file_snippets/: README.md  go_gitignore  go_local.sh  go_main  init_projects.sh  leanpkg.toml  main.fish  main.sh  main.sh.bak  py_local.sh  py_main  pyproject.toml  python_gitignore  run.sh  rust_gitignore  rust_local.sh  rustfmt.toml  upload_py_lib.sh
home/v/g/: README.md
home/v/s/help_scripts/tg/: .gitignore  Cargo.toml  README.md  functions.sh
home/v/s/help_scripts/tg/src/: config.rs  main.rs
(+328 files in other folders)
