[package]
name = "tg"
version = "0.1.0"
edition = "2021"

[dependencies]
derive-new = "*"
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0.86"
reqwest = "0.12.4"
clap = { version = "4.5.7", features = ["derive"] }
v_utils = { version = "^1.3.15", features = ["io"] }
config = "0.14.0"
serde = "1.0.203"
serde_json = "1.0.117"

[package.metadata.cargo-machete]
ignored = ["derive-new", "anyhow", "serde", "tokio"]
